2006-05-19  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm.c, daemon/gdmconfig.[ch], daemon/slave.c,
	  daemon/verify-pam.c: Fix per-display configuration so it
	  also works for greeter/SystemMenu and greeter/ChooserButton
	  keys.  Add new gdmconfig.c interfaces for getting keys in
	  a per-display fashion so they are easier to use.

2006-05-18  Brian Cameron  <brian.cameron@sun.com>

	* config/Makefile.am: Do not cause make install to fail if chown
	  fails.

2006-05-17  Brian Cameron  <brian.cameron@sun.com>

	* daemon/auth.c: Check if authdir is the fallback dir.  If not,	
	  and GDM cannot access the user's $HOME directory, then try and
	  use the fallback directory.  Fixes bug #342116.  Patch provided
	  by Arjan Timmerman <arjan@soulfly.nl>.

2006-05-15  Brian Cameron  <brian.cameron@sun.com>

        * Release 2.15.3:
        * NEWS: Updated.  Also include 2.14.6 NEWS.
	* configure.ac: Update to new release version.

2006-05-15  Brian Cameron  <brian.cameron@sun.com>

	* configure.ac: Clean up the code a bit so that we don't figure
	  out the real prefix twice.

2006-05-15  Brian Cameron  <brian.cameron@sun.com>

	* configure.ac: Fix configure so it builds the path to use for
	  gdm-ssh-session desktop file properly if --libexecdir isn't
	  passed to configure.

2006-05-15  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmcommon.c: Use ngettext.  Patch provided by Benoit Dejean
	  <benoit@placenet.org>.  Fixes bug #341680.

2006-05-12  Brian Cameron  <brian.cameron@sun.com>

	* utils/Makefile.am: Add gdm-ssh-session to EXTRA_DIST.

2006-05-12  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmsession.c: Fix bug that was causing the
	  ShowGnomeFailsafeSession and ShowGnomeXtermSession configuration
	  values not to work right.

2006-05-12  Christian Kirbach  <Christian.Kirbach@siemens.com>

	* daemon/gdm.c, gui/gdmXnestchosser.c, gui/gdmchooser.c,
	  gui/gdmflexiserver.c: stop using popt in favour of glib's GOption
	  command line parsing.