@@ -1,3 +1,9 @@
+2006-05-22  Brian Cameron  <brian.cameron@sun.com>
+
+	* gui/greeter/greeter_events.c:  Fix so that the entry field 
+	  always has focus after a button press, which wasn't working
+	  if the buttons were GTK+ style.
+
 2006-05-19  Brian Cameron  <brian.cameron@sun.com>
 
 	* daemon/gdm.c, daemon/gdmconfig.[ch], daemon/slave.c,
